kube-Mark-10.2/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: node-service
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
