kube-Mark-10.2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "kamal.app.com"
  - http:
      paths:
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 80
